# Feather

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  Feather.slnx  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
benchmarks/ShaderOptimization/: Program.cs  README.md
benchmarks/ShaderOptimization/shaders/: handwritten-fused-mlp.comp  handwritten-particle-sim.comp
docs/: README.md  ad-implementation-note.md  api.md  autodiff.md  csharp-subset.md  diagnostics.md  examples.md  faq.md  feir.md  getting-started.md  graphics-pipeline.md  ir-format.md  native-abi.md  nn-status.md  nn.md  packaging.md  shader-libraries.md  support-status.md  tutorial.md  typed-ir-compute-support-matrix.md  window.md
docs/api/: autodiff.md  core.md  graphics.md  interop.md  kernels.md  math.md  nn.md  resources.md  windowing.md
eng/: build-native.sh  build.sh  check-markdown-links.py  check-native-export.sh  pack.sh  stage-native-assets.sh  test.sh
native/: CMakeLists.txt  ad_native_coverage_probe.cpp  feather_c_api.cpp  feather_c_api.h  feather_handles.h  feather_ir_bridge.cpp  feather_typed_ir.cpp  feather_typed_ir.h  feather_typed_ir_lowerer.cpp  feather_typed_ir_lowerer.h  optimization_benchmark.cpp
samples/: Directory.Build.props
samples/AdGptDemo/: Program.cs
samples/AdGptPoetDemo/: Program.cs
samples/AdLinearRegression/: Program.cs
samples/AdTransformer/: Program.cs
samples/AutoDiffLinearRegression/: Program.cs
samples/ColorFilter/: Program.cs
samples/GpuStructInterfaces/: GpuStructInterfaces.csproj  Program.cs
samples/HelloBuffer/: Program.cs
samples/HelloWorld/: Program.cs
samples/Histogram/: Program.cs
samples/JuliaSet/: Program.cs
samples/Mandelbrot/: Program.cs
samples/ParallelReduction/: Program.cs
samples/ProfilerSuite/: Program.cs
samples/RayTracing/: Program.cs
samples/SdfRenderer/: Program.cs
samples/SpirvOptInspection/: Program.cs
samples/SponzaRenderer/: Program.cs
samples/TextureCopy/: Program.cs
samples/VolumetricFog/: Program.cs
samples/WindowCompute/: Program.cs
samples/WindowGraphicsTexturedQuad/: Program.cs
samples/WindowGraphicsTriangle/: Program.cs
samples/WindowHello/: Program.cs  WindowHello.csproj
samples/WindowPixels/: Program.cs  WindowPixels.csproj
scripts/: ad-coverage-gate.py  ad-industrial-gate.py  ad-native-coverage-gate.py  feather-ci-gate.sh  nn-industrial-gate.py  optimization-benchmark.py
src/Feather/: Feather.csproj
src/Feather.Generators/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  Feather.Generators.csproj  FeatherAnalyzer.cs  FeatherGenerator.cs
src/Feather.Generators/Diagnostics/: FeatherDiagnostics.cs
src/Feather.Generators/IR/: FeatherIrWriter.cs
src/Feather.Generators/Lowering/: ShaderCallGraphBuilder.cs  ShaderIrLowerer.cs  ShaderIrModuleWriter.cs
src/Feather.Generators/Model/: GpuStructFieldDiscovery.cs  GpuStructLayoutRules.cs  GpuStructModelFactory.cs  GpuStructModels.cs  ShaderElementwiseExpressionLowerer.cs  ShaderInvocationLowerer.cs  ShaderIrModel.cs  ShaderModelFactory.cs  ShaderModels.cs  ShaderResourceElementLowerer.cs  ShaderSemanticFacts.cs  ShaderSemanticLowerer.cs  ShaderTypeFactory.cs
src/Feather.Generators/Properties/: AssemblyInfo.cs
src/Feather.Native/: Feather.Native.csproj  Handles.cs  NativeMethods.cs  NativeStringCall.cs  NativeStructs.cs
src/Feather.NativeAssets/: Feather.NativeAssets.csproj
src/Feather/AD/: AD.cs
src/Feather/Core/: Attributes.cs  Enums.cs  GPU.cs  GpuContext.cs  GpuProfiler.cs  ShaderInterfaces.cs
src/Feather/Diagnostics/: DiagnosticDescriptors.cs
src/Feather/Graphics/: GpuGraphicsPipeline.cs  ShaderIds.cs
src/Feather/Interop/: FeatherIrModule.cs  GeneratedContracts.cs  GpuArray.cs  GpuStructLayout.cs  (+2 more)
tests/: Directory.Build.props
tests/Feather.AD.Tests/: ADCallableRegressionTests.cs  ADNumericalCorrectnessTests.cs  ADSurfaceTests.cs  Feather.AD.Tests.csproj
tests/Feather.Generator.Tests/: Feather.Generator.Tests.csproj  GeneratorAndAnalyzerTests.cs
tests/Feather.Gpu.Tests/: ComputeSurfaceTests.cs
tests/Feather.Graphics.Tests/: GraphicsSurfaceTests.cs  WindowingNativeOptInTests.cs  WindowingSurfaceTests.cs
tests/Feather.Integration.Tests/: AssemblyInfo.cs  AutoDiffManagedReadbackTests.cs  AutoDiffNativeBridgeTests.cs  Feather.Integration.Tests.csproj  GeneratedComputeDispatchTests.cs  GeneratedGraphicsPipelineTests.cs  GraphicsDrawFallbackTests.cs  NNTrainingIntegrationTests.cs  NativeResourceRoundTripTests.cs  ProjectShapeTests.cs  ShaderDslCoverageTests.cs
tests/Feather.NN.Tests/: Feather.NN.Tests.csproj  NNSurfaceTests.cs
tests/Feather.Native.Tests/: Feather.Native.Tests.csproj  NativeContractTests.cs
tests/Feather.Tests/: MathSurfaceTests.cs  PublicApiTests.cs
(+29 files in other folders)
